# stepik-learning

./: .gitignore  data.py  pyproject.toml
app/: app.py  db.py  filters.py  forms.py  migrator.py
app/data/: goals.json  teachers.json
app/data/teachers/: 0.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/templates/: all.html  base.html  booking.html  booking_done.html  goal.html  index.html  profile.html  request.html  request_done.html
