[tool.poetry]
name = "stepik-learning"
version = "0.1.0"
description = ""
authors = ["Alexander Erdyakov <sa@prg.re>"]
license = "MOT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pymorphy2 = "^0.9.1"
pip = "^21.0.1"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
